--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
         </section>
-        <script src="./js/mokepon.js"></script>
+        <script src="./public/js/mokepon.js"></script>
     </body>
 </html>
 
